# qml-hello-world

./: .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg
Resources/qml/: main.qml  qml.qrc
SourceFiles/: main.cpp
